@@ -4,6 +4,8 @@ Changes
 Next release
 ------------
 
+- Translate title and description of items for sequence fields.
+
 - Deform now includes a ``beautify.css`` (contributed by Ergo^) in its static
   directory, which can be used to make form element styling prettier.
 
